--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   avatar           : "LJW.jpg" # filename of avatar image placed in /images/ for author profile
   name             : "Dr.Liu Junwei"
   pronouns         : # example: "she/her"  
-  bio              : "Pushing the boundary of EEE research"
+  bio              : "Pushing the boundary of power electronic research"
   location         : "Hong Kong"
   employer         : "PolyU"
   uri              : # URL
