--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@ local/
 Gemfile.lock
 
 # Ignore files created by npm
-
-
+node_modules
+package-lock.json
 
 # Ignore the vendor file at root level and bundle for alternative installation
 /vendor/
