V3 added team page with member details, delete the honnor part add the personal card in abobut me page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -23,8 +23,8 @@ main:
   - title: "Project"
     url: /project/
         
-  - title: "Honor"
-    url: /honor/
+  - title: "Team"
+    url: /team/
   #- title: "Blog Posts"
   #  url: /year-archive/
     
